--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="UsedJavaLibraries/junit-4.13-beta-1.jar"/>
 	<classpathentry kind="lib" path="UsedJavaLibraries/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="UsedJavaLibraries/log4j-core-2.11.0.jar"/>
+	<classpathentry kind="lib" path="UsedJavaLibraries/log4j-api-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
