--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="UsedJavaLibraries/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="lib" path="UsedJavaLibraries/log4j-core-2.11.0.jar"/>
 	<classpathentry kind="lib" path="UsedJavaLibraries/log4j-api-2.11.0.jar"/>
+	<classpathentry kind="lib" path="UsedJavaLibraries/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="UsedJavaLibraries/commons-text-1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
