--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,9 @@
 /com/
-/MyAnnotation.class
-/AnnotationsExample.class
+/AdvancedDebugDemo.class
 /AnnotationsExample$MyClasss.class
+/AnnotationsExample.class
+/MyAnnotation.class
+/SomeFileOperations.class
+/StreamTest.class
+/craking/
+/justJavaPractice/
