Notably MinSwapRequiredBringKElementTogether problem

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,15 @@
+/AdvancedDebugDemo.class
+/AnnotationsExample$MyClasss.class
+/AnnotationsExample.class
+/GFG.class
+/GFGRightRoateArrayWithLinearTime.class
+/MyAnnotation.class
+/Program.class
+/PushZero.class
+/SomeFileOperations.class
+/StreamTest.class
+/aaaa/
 /com/
 /craking/
 /justJavaPractice/
+/MinSwapRequiredBringKElementTogether.class
